--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,7 +2,8 @@
     width: 100%;
     height: 250px;
     margin: auto;
-    overflow: scroll;
+    overflow-x:auto;
+    overflow-y:auto;
     text-align: center;
     font-weight: bold;
     font-size: 1.2rem;
