--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -5,11 +5,20 @@
     width: 70%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
-    padding: 16px;
-    left: 15%;
-    top: 30%;
+    padding: 10px;
+    left: 10%;
+    top: 40%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+}
+
+@media (max-width: 600px) {
+    .Modal {
+        top: 10%;
+        left: 5%;
+        width: 90%;
+        padding: 5px;
+    }
 }
 
 @media (min-width: 600px) {
