--- a/src/components/Navigation/Sidedrawer/Sidedrawer.module.css
+++ b/src/components/Navigation/Sidedrawer/Sidedrawer.module.css
@@ -1,32 +1,39 @@
 .Sidedrawer {
-    position: fixed;
-    width: 280px;
-    max-width: 70;
-    height: 100%;
-    left:0;
-    top:0;
-    z-index: 200;
-    background-color: white;
-    padding: 32px 16px;
-    box-sizing: border-box;
-    transition: transform 0.3s ease-out;   
+  position: fixed;
+  width: 280px;
+  max-width: 70;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 200;
+  background-color: white;
+  padding: 32px 16px;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-out;
 }
 
-@media (min-width: 500px) {
-    .Sidedrawer {
-        display: none;
-    }
+@media(min-width: 600px) {
+  .Sidedrawer {
+    display: none;
+  }
 }
 
 .Open {
-    transform: translate(0);
+  transform: translate(0);
 }
 
 .Close {
-    transform: translate(-100%);
+  transform: translate(-100%);
 }
 
 .Logo {
-    height: 11%;
-    margin-bottom: 32px;
+  height: 50px;
+  width: 50px;
+  margin-bottom: 32px;
+}
+
+@media(max-height: 250px) {
+  .Logo {
+    display: none;
+  }
 }
