--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,30 +2,31 @@
   width: 100%;
   height: 250px;
   margin: auto;
-  overflow-x: auto;
-  overflow-y: auto;
+  overflow: auto;
   text-align: center;
   font-weight: bold;
   font-size: 1.2rem;
-
 }
 
-@media(max-width: 450px) {
+@media(min-width: 400px) {
   .Burger {
+    width: 350px;
     height: 300px;
   }
 }
 
-@media(min-width: 451px) {
+@media(min-width: 600px) {
   .Burger {
     width: 450px;
     height: 400px;
   }
 }
 
-@media(min-width: 1000px) and(min-height: 700px) {
-  .Burger {
-    width: 700px;
-    height: 600px;
+@media(min-width: 1000px) {
+  @media(min-height: 700px) {
+    .Burger {
+      width: 700px;
+      height: 600px;
+    }
   }
 }
